--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -6,14 +6,6 @@
 @import 'variables';
 
 
-/*+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-
-         FUNCTIONS and MIXINS
-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+*/
-
-@function color($color-name){
-    @return map-get($color, $color-name);
-}
-
 
 html,body{
     color: color(black);
